// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1dbeee",
          "borderRadius": 24.375,
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "paddingHorizontal": 16.25,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fcfcfc",
            "fontFamily": "Proxima Nova",
            "fontSize": 16.25,
            "lineHeight": 16.25,
          }
        }
      >
        Button
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Button renders correctly 2`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#d9dbdf",
          "borderRadius": 24.375,
          "borderWidth": 0,
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "paddingHorizontal": 16.25,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fcfcfc",
            "fontFamily": "Proxima Nova",
            "fontSize": 16.25,
            "lineHeight": 16.25,
          }
        }
      >
        Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button renders correctly 3`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1dbeee",
          "borderRadius": 24.375,
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "paddingHorizontal": 16.25,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#fcfcfc"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
</View>
`;

exports[`Button renders correctly 4`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1dbeee",
          "borderRadius": 24.375,
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "paddingHorizontal": 16.25,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fcfcfc",
            "fontFamily": "Proxima Nova",
            "fontSize": 16.25,
            "lineHeight": 16.25,
          }
        }
      >
        Button
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
